<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.myweatherapp.viewModel.WeatherInfoViewModel" />

        <variable
            name="activity"
            type="com.example.myweatherapp.view.screens.WeatherInfoActivity" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.screens.WeatherInfoActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="#ffffff">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_city_name"
                    app:layout_constraintEnd_toStartOf="@+id/btnSearch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:onClick="@{()->activity.searchButtonClick()}"
                    android:text="@string/search"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/weatherCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#ffffff"
            app:layout_constraintTop_toBottomOf="@+id/card1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/weatherTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/weather"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/weatherTitle"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageView
                        imageUrl="@{activity.getByCityNameResponseObservableField.weather.get(0).getIconLink()}"
                        android:id="@+id/weatherIcon"
                        android:layout_width="68dp"
                        android:layout_height="68dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:id="@+id/textLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="end|center_vertical"
                            android:layout_marginEnd="5dp"
                            android:gravity="end"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/location"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@{activity.getByCityNameResponseObservableField.name}"
                                android:layout_gravity="end"
                                android:gravity="end"
                                android:textColor="@color/black"
                                android:textSize="15sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/condition"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="2dp"
                                android:text="@{activity.getByCityNameResponseObservableField.weather.get(0).main}"
                                android:textSize="15sp" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/temp"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="2dp"
                                android:gravity="bottom"
                                android:textSize="20sp" />


                        </LinearLayout>

                    </RelativeLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/darker_gray" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    android:id="@+id/ll_extraWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:visibility="visible">


                    <androidx.appcompat.widget.AppCompatTextView
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:id="@+id/humidity_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/humidity"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{String.valueOf(activity.getByCityNameResponseObservableField.main.humidity)}"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:id="@+id/tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp" />


                    <androidx.appcompat.widget.AppCompatTextView
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/humidity_desc"
                        android:id="@+id/pres_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pressure"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{String.valueOf(activity.getByCityNameResponseObservableField.main.pressure)}"
                        android:id="@+id/tvPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvHumidity"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/ws_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_speed"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pres_desc"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{String.valueOf(activity.getByCityNameResponseObservableField.wind.speed)}"
                        android:id="@+id/tvWind"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvPressure"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="15sp" />


                    <androidx.appcompat.widget.AppCompatTextView
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ws_desc"
                        android:id="@+id/wd_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wind_degree"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{String.valueOf(activity.getByCityNameResponseObservableField.wind.deg)}"
                        android:id="@+id/tvWindDeg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/tvWind"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:textSize="15sp" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>